--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-08-23 Thu 17:16 -->
+<!-- 2018-08-23 Thu 17:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</title>
@@ -646,7 +646,7 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="preamble" class="status">
-<span style="color:#596a73; font-size:17px"><b>Marie-Hélène Burle</b></span><br><span style="color:#596a73; font-size:15px"><img src="./email.ico" height="16" width="16"> <a href="mailto:msb2@sfu.ca">msb2@sfu.ca</a>&nbsp;&nbsp;<img src="./twitter.ico" height="17" width="17"> <a href="https://twitter.com/MHBurle">@MHBurle</a>&nbsp;&nbsp;<img src="./gh.ico" height="15" width="15"> <a href="https://github.com/prosoitos">prosoitos</a></span><br><span style="color:#596a73; font-size:16px">August 23, 2018</span>
+<span style="color:#596a73; font-size:17px"><b>Marie-Hélène Burle</b></span><br><span style="color:#596a73; font-size:15px"><img src="./email.ico" alt="email" height="16" width="16"> <a href="mailto:msb2@sfu.ca">msb2@sfu.ca</a>&nbsp;&nbsp;<img src="./twitter.ico" alt="twitter" height="17" width="17"> <a href="https://twitter.com/MHBurle">@MHBurle</a>&nbsp;&nbsp;<img src="./gh.ico" alt="github" height="15" width="15"> <a href="https://github.com/prosoitos">prosoitos</a></span><br><span style="color:#596a73; font-size:16px">August 23, 2018</span>
 </div>
 <div id="content">
 <h1 class="title"><span style="font-size: 60%; color: #460606;">R workshop for the</span><span style="font-size: 75%; color: #460606;"> International Ornithological Congress 2018</span></span><br>Better practices in R,<br>no more copy-paste, no more loops</h1>
@@ -654,19 +654,19 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1e6e82b">A. Program</a>
+<li><a href="#org5b41b68">A. Program</a>
 <ul>
-<li><a href="#org3e4d505">1. Portability, reproducibility, and readability</a></li>
-<li><a href="#org3b55048">2. Functional programming</a></li>
-<li><a href="#org4b04c33">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</a></li>
+<li><a href="#org50300da">1. Portability, reproducibility, and readability</a></li>
+<li><a href="#org7ecd7e5">2. Functional programming</a></li>
+<li><a href="#orgc788946">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</a></li>
 </ul>
 </li>
-<li><a href="#orgfdeec42">B. Logistical considerations</a>
+<li><a href="#org57d51e7">B. Logistical considerations</a>
 <ul>
-<li><a href="#org08185ee">Target audience</a></li>
-<li><a href="#org9da6c58">Where and when?</a></li>
-<li><a href="#org2eb8e39">No fee nor registration</a></li>
-<li><a href="#org51106fb">Software requirements</a></li>
+<li><a href="#org70ce3f0">Target audience</a></li>
+<li><a href="#org1823a28">Where and when?</a></li>
+<li><a href="#orgab5797d">No fee nor registration</a></li>
+<li><a href="#org3fa3e71">Software requirements</a></li>
 </ul>
 </li>
 </ul>
@@ -680,13 +680,13 @@ Most of us biologists do not learn R properly: we do not have a computing scienc
 This workshop focuses on two sets of considerations important for writing better code:<br />
 </p>
 
-<div id="outline-container-org1e6e82b" class="outline-2">
-<h2 id="org1e6e82b">A. Program</h2>
-<div class="outline-text-2" id="text-org1e6e82b">
+<div id="outline-container-org5b41b68" class="outline-2">
+<h2 id="org5b41b68">A. Program</h2>
+<div class="outline-text-2" id="text-org5b41b68">
 </div>
-<div id="outline-container-org3e4d505" class="outline-3">
-<h3 id="org3e4d505">1. Portability, reproducibility, and readability</h3>
-<div class="outline-text-3" id="text-org3e4d505">
+<div id="outline-container-org50300da" class="outline-3">
+<h3 id="org50300da">1. Portability, reproducibility, and readability</h3>
+<div class="outline-text-3" id="text-org50300da">
 <p>
 Code that is portable, reproducible, and readable is critical when collaborating on projects. At the start of this workshop, we will briefly go over:<br />
 </p>
@@ -703,9 +703,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org3b55048" class="outline-3">
-<h3 id="org3b55048">2. Functional programming</h3>
-<div class="outline-text-3" id="text-org3b55048">
+<div id="outline-container-org7ecd7e5" class="outline-3">
+<h3 id="org7ecd7e5">2. Functional programming</h3>
+<div class="outline-text-3" id="text-org7ecd7e5">
 <p>
 What do you do when you need to apply the same treatment to multiple datasets or multiple variables within a dataset?<br />
 </p>
@@ -739,9 +739,9 @@ The workshop material (without the solutions to the short challenges) can be fou
 </div>
 </div>
 
-<div id="outline-container-org4b04c33" class="outline-3">
-<h3 id="org4b04c33">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</h3>
-<div class="outline-text-3" id="text-org4b04c33">
+<div id="outline-container-orgc788946" class="outline-3">
+<h3 id="orgc788946">3. (Bonus if time allows): <code class="src src-R">magrittr</code> less used pipes</h3>
+<div class="outline-text-3" id="text-orgc788946">
 <p>
 The workshop material can be found <a href="https://prosoitos.github.io/r_workshop_international-ornithological-congress/r_magrittr-bonus.html">here</a>.<br />
 </p>
@@ -749,13 +749,13 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-orgfdeec42" class="outline-2">
-<h2 id="orgfdeec42">B. Logistical considerations</h2>
-<div class="outline-text-2" id="text-orgfdeec42">
+<div id="outline-container-org57d51e7" class="outline-2">
+<h2 id="org57d51e7">B. Logistical considerations</h2>
+<div class="outline-text-2" id="text-org57d51e7">
 </div>
-<div id="outline-container-org08185ee" class="outline-3">
-<h3 id="org08185ee">Target audience</h3>
-<div class="outline-text-3" id="text-org08185ee">
+<div id="outline-container-org70ce3f0" class="outline-3">
+<h3 id="org70ce3f0">Target audience</h3>
+<div class="outline-text-3" id="text-org70ce3f0">
 <ul class="org-ul">
 <li>Intermediate R users comfortable with basic data manipulation and simple functions,<br /></li>
 <li>Advanced users familiar with functional programming using the family of the <code class="src src-R"><span class="org-ess-function-call">apply</span><span class="org-ess-paren"><span class="org-rainbow-delimiters-depth-1">()</span></span></code> functions and interested in discovering the "purrring" way.<br /></li>
@@ -763,9 +763,9 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org9da6c58" class="outline-3">
-<h3 id="org9da6c58">Where and when?</h3>
-<div class="outline-text-3" id="text-org9da6c58">
+<div id="outline-container-org1823a28" class="outline-3">
+<h3 id="org1823a28">Where and when?</h3>
+<div class="outline-text-3" id="text-org1823a28">
 <p>
 <b>Date:</b> Thursday 23<br />
 <b>Time:</b> 8pm-10pm<br />
@@ -774,18 +774,18 @@ The workshop material can be found <a href="https://prosoitos.github.io/r_worksh
 </div>
 </div>
 
-<div id="outline-container-org2eb8e39" class="outline-3">
-<h3 id="org2eb8e39">No fee nor registration</h3>
-<div class="outline-text-3" id="text-org2eb8e39">
+<div id="outline-container-orgab5797d" class="outline-3">
+<h3 id="orgab5797d">No fee nor registration</h3>
+<div class="outline-text-3" id="text-orgab5797d">
 <p>
 There is no fee nor registration for this event. Simply join us with your laptop ready for the workshop (see below).<br />
 </p>
 </div>
 </div>
 
-<div id="outline-container-org51106fb" class="outline-3">
-<h3 id="org51106fb">Software requirements</h3>
-<div class="outline-text-3" id="text-org51106fb">
+<div id="outline-container-org3fa3e71" class="outline-3">
+<h3 id="org3fa3e71">Software requirements</h3>
+<div class="outline-text-3" id="text-org3fa3e71">
 <p>
 In order to make the best of this workshop, please bring a laptop with the following installed:<br />
 </p>
